syntax = "proto3";

service ExerciseStore{
    rpc GetExercises(Empty) returns (GetExercisesResponse) {}
    rpc GetExerciseByTags(GetExerciseByTagsRequest) returns (GetExercisesResponse) {}
    rpc GetExerciseByCategory(GetExerciseByCategoryRequest) returns (GetExercisesResponse) {}

    //todo future implementation, those will be managed by the webclient
    //make sure to do not add exercises or category with the same tag twice
    rpc AddExercise(AddExerciseRequest) returns (ResponseStatus) {}
    rpc UpdateExercise(UpdateExerciseRequest) returns (ResponseStatus) {}
}

message Empty{}

message ChildExercise{
    string tag = 1;
    string name = 2;
    string env_flag = 3;
    int32 points = 4;
    reserved 5;
    string team_description = 6;
    reserved 7; //might be useful in the future
    //    string organizer_description = 8; //todo could be usefull to store all the exercises data in the db as well, we might want to generate PDF for organizer
    //    repeated string prerequisite = 9;
    //    repeated string outcome = 10;
}

message Exercise{
    string tag = 1;
    string name = 2;
    //string description = 3; //might be useful for organizers
    reserved 3;
    string category = 4;
    repeated ChildExercise children = 5;
}

message GetExercisesResponse{
    repeated Exercise exercises = 1;
}

message GetExerciseByTagsRequest{
    repeated string tag = 1;
}

message GetExerciseByCategoryRequest{
    string category = 1;
}

//todo modify the messages

message AddExerciseRequest{

}

message ResponseStatus{

}

message UpdateExerciseRequest{

}
